test/hotCases/errors/events/k.js
import values from "./k_exports";

if(module.hot) {
	module.hot.accept("./k_exports");
}
